--- a/envs/bedtools.yaml
+++ b/envs/bedtools.yaml
@@ -4,7 +4,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - bedtools=2.27.1=he941832_2
-  - libgcc-ng=7.2.0=hdf63c60_3
-  - libstdcxx-ng=7.2.0=hdf63c60_3
-  - zlib=1.2.11=h470a237_3
+  - bedtools=2.27.1
+  - libgcc-ng=7.2.0
+  - libstdcxx-ng=7.2.0
+  - zlib=1.2.11
