--- a/envs/index.yaml
+++ b/envs/index.yaml
@@ -5,22 +5,21 @@ channels:
   - r
   - defaults
 dependencies:
-  - libdeflate=1.0=h470a237_0
-  - samtools=1.9=h8ee4bcc_1
-  - segemehl=0.2.0=hd0b41b6_5
-  - bzip2=1.0.6=h470a237_2
-  - ca-certificates=2018.10.15=ha4d7672_0
-  - curl=7.62.0=h74213dd_0
-  - krb5=1.16.2=hbb41f41_0
-  - libcurl=7.62.0=hbdb9355_0
-  - libedit=3.1.20170329=haf1bffa_1
-  - libgcc-ng=7.2.0=hdf63c60_3
-  - libssh2=1.8.0=h5b517e9_2
-  - libstdcxx-ng=7.2.0=hdf63c60_3
-  - ncurses=6.1=hfc679d8_1
-  - openssl=1.0.2p=h470a237_1
-  - tk=8.6.8=ha92aebf_0
-  - xz=5.2.4=h470a237_1
-  - zlib=1.2.11=h470a237_3
-prefix: /home/fall/anaconda3/envs/index
+  - libdeflate=1.0
+  - samtools=1.9
+  - segemehl=0.2.0
+  - bzip2=1.0.6
+  - ca-certificates=2018.10.15
+  - curl=7.62.0
+  - krb5=1.16.2
+  - libcurl=7.62.0
+  - libedit=3.1.20170329
+  - libgcc-ng=7.2.0
+  - libssh2=1.8.0
+  - libstdcxx-ng=7.2.0
+  - ncurses=6.1
+  - openssl=1.0.2p
+  - tk=8.6.8
+  - xz=5.2.4
+  - zlib=1.2.11
 
