--- a/envs/minimap.yaml
+++ b/envs/minimap.yaml
@@ -4,128 +4,128 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - asn1crypto=0.24.0=py37_1003
-  - attrs=19.1.0=py_0
-  - backcall=0.1.0=py_0
-  - biopython=1.73=py37h14c3975_0
-  - bleach=3.1.0=py_0
-  - bzip2=1.0.6=h14c3975_1002
-  - ca-certificates=2019.6.16=hecc5488_0
-  - certifi=2019.3.9=py37_0
-  - cffi=1.12.3=py37h8022711_0
-  - chardet=3.0.4=py37_1003
-  - cryptography=2.7=py37h72c5cf5_0
-  - cycler=0.10.0=py_1
-  - dbus=1.13.6=he372182_0
-  - decorator=4.4.0=py_0
-  - defusedxml=0.5.0=py_1
-  - entrypoints=0.3=py37_1000
-  - expat=2.2.5=hf484d3e_1002
-  - fontconfig=2.13.1=he4413a7_1000
-  - freetype=2.10.0=he983fc9_0
-  - gettext=0.19.8.1=hc5be6a0_1002
-  - glib=2.58.3=h6f030ca_1001
-  - gst-plugins-base=1.14.5=h0935bb2_0
-  - gstreamer=1.14.5=h36ae1b5_0
-  - h5py=2.9.0=nompi_py37hf008753_1102
-  - hdf5=1.10.4=nompi_h3c11f04_1106
-  - icu=58.2=hf484d3e_1000
-  - idna=2.8=py37_1000
-  - ipykernel=5.1.1=py37h24bf2e0_0
-  - ipython=7.5.0=py37h24bf2e0_0
-  - ipython_genutils=0.2.0=py_1
-  - jedi=0.13.3=py37_0
-  - jinja2=2.10.1=py_0
-  - jpeg=9c=h14c3975_1001
-  - jsonschema=3.0.1=py37_0
-  - jupyter_client=5.2.4=py_3
-  - jupyter_contrib_core=0.3.3=py_2
-  - jupyter_contrib_nbextensions=0.5.1=py37_0
-  - jupyter_core=4.4.0=py_0
-  - jupyter_highlight_selected_word=0.2.0=py37_1000
-  - jupyter_latex_envs=1.4.4=py37_1000
-  - jupyter_nbextensions_configurator=0.4.1=py37_0
-  - jupyterthemes=0.20.0=py_0
-  - kiwisolver=1.1.0=py37hc9558a2_0
-  - lesscpy=0.13.0=py_1
-  - libblas=3.8.0=7_openblas
-  - libcblas=3.8.0=7_openblas
-  - libffi=3.2.1=he1b5a44_1006
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran=3.0.0=1
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libiconv=1.15=h516909a_1005
-  - liblapack=3.8.0=7_openblas
-  - libpng=1.6.37=hed695b0_0
-  - libsodium=1.0.16=h14c3975_1001
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libuuid=2.32.1=h14c3975_1000
-  - libxcb=1.13=h14c3975_1002
-  - libxml2=2.9.9=h13577e0_0
-  - libxslt=1.1.32=h4785a14_1002
-  - lxml=4.3.4=py37h7ec2d77_0
-  - markupsafe=1.1.1=py37h14c3975_0
-  - matplotlib=3.1.0=py37_1
-  - matplotlib-base=3.1.0=py37hfd891ef_1
-  - minimap2=2.17=h84994c4_0
-  - mistune=0.8.4=py37h14c3975_1000
-  - nbconvert=5.5.0=py_0
-  - nbformat=4.4.0=py_1
-  - ncurses=6.1=hf484d3e_1002
-  - notebook=5.7.8=py37_1
-  - numpy=1.16.4=py37h95a1406_0
-  - openblas=0.3.5=ha44fe06_0
-  - openssl=1.1.1b=h14c3975_1
-  - pandas=0.24.2=py37hb3f55d8_0
-  - pandoc=2.7.3=0
-  - pandocfilters=1.4.2=py_1
-  - parso=0.4.0=py_0
-  - pcre=8.41=hf484d3e_1003
-  - pexpect=4.7.0=py37_0
-  - pickleshare=0.7.5=py37_1000
-  - pip=19.1.1=py37_0
-  - plotly=3.10.0=py_0
-  - ply=3.11=py_1
-  - prometheus_client=0.7.0=py_0
-  - prompt_toolkit=2.0.9=py_0
-  - pthread-stubs=0.4=h14c3975_1001
-  - ptyprocess=0.6.0=py_1001
-  - pycoqc=2.2.4=py_0
-  - pycparser=2.19=py37_1
-  - pygments=2.4.2=py_0
-  - pyopenssl=19.0.0=py37_0
-  - pyparsing=2.4.0=py_0
-  - pyqt=5.9.2=py37hcca6a23_0
-  - pyrsistent=0.15.2=py37h516909a_0
-  - pysocks=1.7.0=py37_0
-  - python=3.7.3=h5b0a415_0
-  - python-dateutil=2.8.0=py_0
-  - pytz=2019.1=py_0
-  - pyyaml=5.1.1=py37h516909a_0
-  - pyzmq=18.0.1=py37hc4ba49a_1
-  - qt=5.9.7=h52cfd70_2
-  - readline=7.0=hf8c457e_1001
-  - requests=2.22.0=py37_0
-  - retrying=1.3.3=py_2
-  - scipy=1.3.0=py37h921218d_0
-  - send2trash=1.5.0=py_0
-  - setuptools=41.0.1=py37_0
-  - sip=4.19.8=py37hf484d3e_1000
-  - six=1.12.0=py37_1000
-  - sqlite=3.28.0=h8b20d00_0
-  - terminado=0.8.2=py37_0
-  - testpath=0.4.2=py_1001
-  - tk=8.6.9=hed695b0_1002
-  - tornado=6.0.2=py37h516909a_0
-  - tqdm=4.32.2=py_0
-  - traitlets=4.3.2=py37_1000
-  - urllib3=1.24.3=py37_0
-  - wcwidth=0.1.7=py_1
-  - webencodings=0.5.1=py_1
-  - wheel=0.33.4=py37_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
-  - xz=5.2.4=h14c3975_1001
-  - yaml=0.1.7=h14c3975_1001
-  - zeromq=4.3.1=hf484d3e_1000
-  - zlib=1.2.11=h14c3975_1004
+  - asn1crypto=0.24.0
+  - attrs=19.1.0
+  - backcall=0.1.0
+  - biopython=1.73
+  - bleach=3.1.0
+  - bzip2=1.0.6
+  - ca-certificates=2019.6.16
+  - certifi=2019.3.9
+  - cffi=1.12.3
+  - chardet=3.0.4
+  - cryptography=2.7
+  - cycler=0.10.0
+  - dbus=1.13.6
+  - decorator=4.4.0
+  - defusedxml=0.5.0
+  - entrypoints=0.3
+  - expat=2.2.5
+  - fontconfig=2.13.1
+  - freetype=2.10.0
+  - gettext=0.19.8.1
+  - glib=2.58.3
+  - gst-plugins-base=1.14.5
+  - gstreamer=1.14.5
+  - h5py=2.9.0
+  - hdf5=1.10.4
+  - icu=58.2
+  - idna=2.8
+  - ipykernel=5.1.1
+  - ipython=7.5.0
+  - ipython_genutils=0.2.0
+  - jedi=0.13.3
+  - jinja2=2.10.1
+  - jpeg=9c
+  - jsonschema=3.0.1
+  - jupyter_client=5.2.4
+  - jupyter_contrib_core=0.3.3
+  - jupyter_contrib_nbextensions=0.5.1
+  - jupyter_core=4.4.0
+  - jupyter_highlight_selected_word=0.2.0
+  - jupyter_latex_envs=1.4.4
+  - jupyter_nbextensions_configurator=0.4.1
+  - jupyterthemes=0.20.0
+  - kiwisolver=1.1.0
+  - lesscpy=0.13.0
+  - libblas=3.8.0
+  - libcblas=3.8.0
+  - libffi=3.2.1
+  - libgcc-ng=9.1.0
+  - libgfortran=3.0.0
+  - libgfortran-ng=7.3.0
+  - libiconv=1.15
+  - liblapack=3.8.0
+  - libpng=1.6.37
+  - libsodium=1.0.16
+  - libstdcxx-ng=9.1.0
+  - libuuid=2.32.1
+  - libxcb=1.13
+  - libxml2=2.9.9
+  - libxslt=1.1.32
+  - lxml=4.3.4
+  - markupsafe=1.1.1
+  - matplotlib=3.1.0
+  - matplotlib-base=3.1.0
+  - minimap2=2.17
+  - mistune=0.8.4
+  - nbconvert=5.5.0
+  - nbformat=4.4.0
+  - ncurses=6.1
+  - notebook=5.7.8
+  - numpy=1.16.4
+  - openblas=0.3.5
+  - openssl=1.1.1b
+  - pandas=0.24.2
+  - pandoc=2.7.3
+  - pandocfilters=1.4.2
+  - parso=0.4.0
+  - pcre=8.41
+  - pexpect=4.7.0
+  - pickleshare=0.7.5
+  - pip=19.1.1
+  - plotly=3.10.0
+  - ply=3.11
+  - prometheus_client=0.7.0
+  - prompt_toolkit=2.0.9
+  - pthread-stubs=0.4
+  - ptyprocess=0.6.0
+  - pycoqc=2.2.4
+  - pycparser=2.19
+  - pygments=2.4.2
+  - pyopenssl=19.0.0
+  - pyparsing=2.4.0
+  - pyqt=5.9.2
+  - pyrsistent=0.15.2
+  - pysocks=1.7.0
+  - python=3.7.3
+  - python-dateutil=2.8.0
+  - pytz=2019.1
+  - pyyaml=5.1.1
+  - pyzmq=18.0.1
+  - qt=5.9.7
+  - readline=7.0
+  - requests=2.22.0
+  - retrying=1.3.3
+  - scipy=1.3.0
+  - send2trash=1.5.0
+  - setuptools=41.0.1
+  - sip=4.19.8
+  - six=1.12.0
+  - sqlite=3.28.0
+  - terminado=0.8.2
+  - testpath=0.4.2
+  - tk=8.6.9
+  - tornado=6.0.2
+  - tqdm=4.32.2
+  - traitlets=4.3.2
+  - urllib3=1.24.3
+  - wcwidth=0.1.7
+  - webencodings=0.5.1
+  - wheel=0.33.4
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xz=5.2.4
+  - yaml=0.1.7
+  - zeromq=4.3.1
+  - zlib=1.2.11
