--- a/envs/qc.yaml
+++ b/envs/qc.yaml
@@ -4,73 +4,73 @@ channels:
   - bioconda
   - r
 dependencies:
-  - asn1crypto=0.24.0=py35_3
-  - blas=1.1=openblas
-  - ca-certificates=2019.3.9=hecc5488_0
-  - cairo=1.14.6=0
-  - certifi=2018.8.24=py35_1001
-  - cffi=1.11.5=py35_0
-  - chardet=3.0.4=py35_3
-  - click=7.0=py_0
-  - colormath=3.0.0=py_2
-  - cryptography=2.2.1=py35_0
-  - cycler=0.10.0=py_1
-  - decorator=4.4.0=py_0
-  - fastqc=0.11.8=0
-  - fontconfig=2.11.1=6
-  - freetype=2.6.3=1
-  - future=0.16.0=py35_2
-  - gettext=0.19.8.1=0
-  - glib=2.51.4=0
-  - harfbuzz=1.3.4=0
-  - icu=56.1=4
-  - idna=2.7=py35_2
-  - jinja2=2.10.1=py_0
-  - jpeg=9b=2
-  - libffi=3.2.1=3
-  - libgcc=5.2.0=0
-  - libgfortran=3.0.0=1
-  - libiconv=1.14=4
-  - libpng=1.6.34=0
-  - libtiff=4.0.8=0
-  - libxml2=2.9.4=3
-  - lzstring=1.0.4=py_1001
-  - markdown=2.6.11=py_0
-  - markupsafe=1.0=py35_0
-  - matplotlib=2.0.0b4=np111py35_0
-  - multiqc=1.5=py35_0
-  - ncurses=5.9=10
-  - networkx=2.0=py35_1
-  - numpy=1.11.3=py35_blas_openblas_203
-  - openblas=0.2.20=8
-  - openjdk=11.0.1=h516909a_1015
-  - openssl=1.0.2o=0
-  - pango=1.40.3=0
-  - pcre=8.41=1
-  - perl=5.22.2.1=0
-  - pip=18.0=py35_1001
-  - pixman=0.34.0=2
-  - pycparser=2.19=py_0
-  - pyopenssl=18.0.0=py35_0
-  - pyparsing=2.4.0=py_0
-  - pyqt=4.11.4=py35_3
-  - pysocks=1.6.8=py35_2
-  - python=3.5.4=2
-  - python-dateutil=2.8.0=py_0
-  - pytz=2019.1=py_0
-  - pyyaml=3.12=py35_1
-  - qt=4.8.7=3
-  - readline=6.2=0
-  - requests=2.19.1=py35_1
-  - setuptools=40.4.3=py35_0
-  - simplejson=3.16.0=py35_0
-  - sip=4.18=py35_1
-  - six=1.11.0=py35_1
-  - spectra=0.0.11=py_0
-  - sqlite=3.13.0=1
-  - tk=8.5.19=2
-  - urllib3=1.23=py35_1
-  - wheel=0.32.0=py35_1000
-  - xz=5.2.3=0
-  - yaml=0.1.7=0
-  - zlib=1.2.11=0
+  - asn1crypto=0.24.0
+  - blas=1.1
+  - ca-certificates=2019.3.9
+  - cairo=1.14.6
+  - certifi=2018.8.24
+  - cffi=1.11.5
+  - chardet=3.0.4
+  - click=7.0
+  - colormath=3.0.0
+  - cryptography=2.2.1
+  - cycler=0.10.0
+  - decorator=4.4.0
+  - fastqc=0.11.8
+  - fontconfig=2.11.1
+  - freetype=2.6.3
+  - future=0.16.0
+  - gettext=0.19.8.1
+  - glib=2.51.4
+  - harfbuzz=1.3.4
+  - icu=56.1
+  - idna=2.7
+  - jinja2=2.10.1
+  - jpeg=9b
+  - libffi=3.2.1
+  - libgcc=5.2.0
+  - libgfortran=3.0.0
+  - libiconv=1.14
+  - libpng=1.6.34
+  - libtiff=4.0.8
+  - libxml2=2.9.4
+  - lzstring=1.0.4
+  - markdown=2.6.11
+  - markupsafe=1.0
+  - matplotlib=2.0.0b4
+  - multiqc=1.5
+  - ncurses=5.9
+  - networkx=2.0
+  - numpy=1.11.3
+  - openblas=0.2.20
+  - openjdk=11.0.115
+  - openssl=1.0.2o
+  - pango=1.40.3
+  - pcre=8.41
+  - perl=5.22.2.1
+  - pip=18.0
+  - pixman=0.34.0
+  - pycparser=2.19
+  - pyopenssl=18.0.0
+  - pyparsing=2.4.0
+  - pyqt=4.11.4
+  - pysocks=1.6.8
+  - python=3.5.4
+  - python-dateutil=2.8.0
+  - pytz=2019.1
+  - pyyaml=3.12
+  - qt=4.8.7
+  - readline=6.2
+  - requests=2.19.1
+  - setuptools=40.4.3
+  - simplejson=3.16.0
+  - sip=4.18
+  - six=1.11.0
+  - spectra=0.0.11
+  - sqlite=3.13.0
+  - tk=8.5.19
+  - urllib3=1.23
+  - wheel=0.32.0
+  - xz=5.2.3
+  - yaml=0.1.7
+  - zlib=1.2.11
