--- a/envs/segemehl.yaml
+++ b/envs/segemehl.yaml
@@ -4,7 +4,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - segemehl=0.2.0=hdd8ed8b_4
-  - libgcc-ng=7.2.0=hdf63c60_3
-  - ncurses=5.9=10
-  - zlib=1.2.11=h470a237_3
+  - segemehl=0.2.0
+  - libgcc-ng=7.2.0
+  - ncurses=5.9
+  - zlib=1.2.11
