--- a/envs/trimgalore.yaml
+++ b/envs/trimgalore.yaml
@@ -4,28 +4,28 @@ channels:
   - conda-forge
   - r
 dependencies:
-  - bz2file=0.98=py_0
-  - bzip2=1.0.6=h14c3975_1002
-  - ca-certificates=2018.11.29=ha4d7672_0
-  - certifi=2018.11.29=py37_1000
-  - cutadapt=1.18=py37h14c3975_1
-  - fastqc=0.11.8=0
-  - libffi=3.2.1=hf484d3e_1005
-  - libgcc-ng=7.3.0=hdf63c60_0
-  - libstdcxx-ng=7.3.0=hdf63c60_0
-  - ncurses=6.1=hf484d3e_1002
-  - openjdk=11.0.1=h14c3975_1014
-  - openssl=1.0.2p=h14c3975_1002
-  - perl=5.26.2=h14c3975_1002
-  - pigz=2.3.4=0
-  - pip=19.0.3=py37_0
-  - python=3.7.1=hd21baee_1001
-  - readline=7.0=hf8c457e_1001
-  - setuptools=40.8.0=py37_0
-  - sqlite=3.26.0=h67949de_1000
-  - tk=8.6.9=h84994c4_1000
-  - trim-galore=0.5.0=0
-  - wheel=0.33.1=py37_0
-  - xopen=0.5.0=py_0
-  - xz=5.2.4=h14c3975_1001
-  - zlib=1.2.11=h14c3975_1004
+  - bz2file=0.98
+  - bzip2=1.0.6
+  - ca-certificates=2018.11.29
+  - certifi=2018.11.29
+  - cutadapt=1.18
+  - fastqc=0.11.8
+  - libffi=3.2.1
+  - libgcc-ng=7.3.0
+  - libstdcxx-ng=7.3.0
+  - ncurses=6.1
+  - openjdk=11.0.1
+  - openssl=1.0.2p
+  - perl=5.26.2
+  - pigz=2.3.4
+  - pip=19.0.3
+  - python=3.7.1
+  - readline=7.0
+  - setuptools=40.8.0
+  - sqlite=3.26.0
+  - tk=8.6.9
+  - trim-galore=0.5.0
+  - wheel=0.33.1
+  - xopen=0.5.0
+  - xz=5.2.4
+  - zlib=1.2.11
