--- a/envs/zip.yaml
+++ b/envs/zip.yaml
@@ -4,8 +4,7 @@ channels:
   - bioconda
   - r
 dependencies:
-  - libgcc-ng=7.3.0=hdf63c60_0
-  - pigz=2.3.4=0
-  - zlib=1.2.11=h14c3975_1004
-prefix: /home/fall/anaconda3/envs/zip
+  - libgcc-ng=7.3.0
+  - pigz=2.3.4
+  - zlib=1.2.11
 
