--- a/envs/minimap.yaml
+++ b/envs/minimap.yaml
@@ -107,6 +107,7 @@ dependencies:
   - readline=7.0
   - requests=2.22.0
   - retrying=1.3.3
+  - samtools=1.9
   - scipy=1.3.0
   - send2trash=1.5.0
   - setuptools=41.0.1
