--- a/envs/ucsc.yaml
+++ b/envs/ucsc.yaml
@@ -2,7 +2,7 @@ name: ucsc
 channels:
   - conda-forge
   - bioconda
-  - r
+  - defaults
 dependencies:
   - mysql-connector-c=6.1.11
   - ucsc-bedgraphtobigwig=377
