--- a/envs/perl.yaml
+++ b/envs/perl.yaml
@@ -4,6 +4,8 @@ channels:
   - bioconda
   - defaults
 dependencies:
+  - libgcc-ng=7.2.0
+  - libstdcxx-ng=7.2.0
   - perl=5.26.2
   - perl-app-cpanminus=1.7044
   - perl-autoloader=5.74
@@ -49,9 +51,10 @@ dependencies:
   - perl-test=1.26
   - perl-test-harness=3.42
   - perl-text-parsewords=3.30
-  - perl-threaded=5.26.0
+  - perl-threaded=5.26.0=0
   - perl-tie-hash=1.05
   - perl-tie-hash-indexed=0.05
   - perl-time-hires=1.9758
   - perl-version=0.9924
   - perl-xsloader=0.24
+  - zlib=1.2.11
