--- a/configs/config_example.json
+++ b/configs/config_example.json
@@ -26,7 +26,7 @@
     "ANNOTATION":{ #which annotation to use
                 "hg38": "Homo_sapiens.GRCh38.95.gff3.gz"
                  },
-    "ANNOTATE" : "-w ON" #-w ON enables one line per feature annotation, including start/end of the feature, output can become quite large, disable by adding empty string ("") as value
+    "ANNOTATE" : "-w ON", #-w ON enables one line per feature annotation, including start/end of the feature, output can become quite large, disable by adding empty string ("") as value
 #Trimming options
     "ADAPTERS": "adapters.fa", #path to adapter fasta used for trimming
     "READ_MINLEN": "25", # discard reads shorter than that
