--- a/configs/config_example.json
+++ b/configs/config_example.json
@@ -5,7 +5,12 @@
                 "Hsa": "hg38"
               },
     "NAME": { #in case different typed of reference are used, e.g. genomic, artificial, organelle ...
-              "genomic": ".extended"
+               "Gesamt": {
+                   "FAK22338": {
+                       "spliced": ".extended",
+                       "std": ".extended"
+                    }
+                }
             },
     "SOURCE": { #which organisms are to be parsed for which samples
                 "Gesamt": {
@@ -39,7 +44,7 @@
                          "spliced":
                          [
                              {  # First part is for mapper
-                                 "-ax ": "splice",
+                                 "-ax": "splice",
                                  "-k": "14",
                                  "-ub": "",
                                  "-Y": "",
@@ -48,11 +53,11 @@
                                  "-d": ""
                              },
                              "_k14" # Second part is name for index if required, leave empty string if not
-                         ]
+                         ],
                          "std": # See above
                          [
                              {
-                                 "-ax ": "map-ont",
+                                 "-ax": "map-ont",
                                  "-ub": "",
                                  "-Y": "",
                                  "-L": "",
