--- a/configs/config_example.json
+++ b/configs/config_example.json
@@ -49,8 +49,8 @@
                   }
                 },
 #Mapping software options
-    "MAPPERENV": "segemehl3", # which conda env to use for mapping
-    "MAPPERBIN": "segemehl.x", #how the mapper binary is called
+    "MAPPERENV": "minimap", # which conda env to use for mapping
+    "MAPPERBIN": "minimap2", #how the mapper binary is called
     "MAPPINGTYPE": "single", #choice=[single|paired] either single or paired end mapping
     "MAPPING": { #options for mapping for each sample/condition
                  "Dm6": {
@@ -58,17 +58,15 @@
                          "std": # first entry in list is a dict of options, second can be e.g. appendix to index name, useful especially with minimap if using different kmer sizes
                          [
                              {
-                                 "--MEOP": "",
-                                 "--splits": "",
-                                 "--accuracy": "95",
-                                 "--differences": "1",
-                                 "--evalue": "5",
-                                 "--hitstrategy": "1",
-                                 "--minsize": "15",
-                                 "--minfraglen": "20",
-                                 "--fullname": ""
+                                "-ax": "splice",
+                                 "-k": "14",
+                                 "-ub": "",
+                                 "-Y": "",
+                                 "-L": "",
+                                 "--MD": "",
+                                 "-d": ""
                              },
-                             ""
+                             "k14"
                          ]
                      }
                  }
