--- a/configs/config_example.json
+++ b/configs/config_example.json
@@ -75,6 +75,7 @@
                },
 #Annotation options
     "ANNOTATE" : "-w ON", #-w ON enables one line per feature annotation, including start/end of the feature, output can become quite large, disable by adding empty string ("") as value
+    "ANNOFEATURE" : "", #You can specify a set of certain features to annotate here, e.g. 'exon' will only annotate exon overlaps, disable specific feature annotation by adding empty string ("") as value
     "ANNOTATION": { #which annotation to use
                     "Dm6": "dm6.gff.gz"
                  }
