--- a/envs/bedtools.yaml
+++ b/envs/bedtools.yaml
@@ -4,7 +4,23 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - bedtools=2.27.1
-  - libgcc-ng=7.2.0
-  - libstdcxx-ng=7.2.0
+  - _libgcc_mutex=0.1
+  - bedtools=2.26.0
+  - bzip2=1.0.8
+  - ca-certificates=2019.6.16
+  - curl=7.65.3
+  - krb5=1.16.3
+  - libcurl=7.65.3
+  - libdeflate=1.3
+  - libedit=3.1.20170329
+  - libgcc=7.2.0
+  - libgcc-ng=7.3.0
+  - libssh2=1.8.2
+  - libstdcxx-ng=7.3.0
+  - ncurses=5.9
+  - openssl=1.1.1c
+  - samtools=1.9
+  - tk=8.6.9
+  - xz=5.2.4
   - zlib=1.2.11
+
